# parascope

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
plugin/: README.md  ida-plugin.json  ida_plugin_stub.py
rules/: call-to-unbound-copy-functions.yml
src/: binary.rs  common.rs  main.rs  source.rs
