[package]
name = "wegglir"
version = "0.1.0"
authors = ["Sam L. Thomas <s@ghost.sh>"]
description = "Weggli(r) ruleset scanner for binaries and source code"
license = "MIT"
repository = "https://github.com/xorpse/wegglitic.git"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
idalib = "0.1"
fugue-mptp = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.16"
weggli-ruleset = "0.1.5"
wegglix = "0.2"

[build-dependencies]
idalib-build = "0.1"

[patch.crates-io]
idalib = { path = "../idalib-brly/idalib" } #git = "ssh://github.com/binarly-io/idalib.git", branch = "feature/hexrays" }
idalib-build = { path = "../idalib-brly/idalib-build" } #git = "ssh://github.com/binarly-io/idalib.git", branch = "feature/hexrays" }
