[package]
name = "parascope"
version = "0.1.1"
authors = ["Sam L. Thomas <s@ghost.sh>"]
description = "Weggli ruleset scanner for source code and binaries"
license = "MIT"
documentation = "https://xv.ax/parascope"
repository = "https://github.com/xorpse/parascope.git"
readme = "./README.md"
edition = "2021"
build = "build.rs"
exclude = ["rules", "tests"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
idalib = "0.4"
fugue-mptp = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.16"
weggli-ruleset = "0.1.5"
wegglix = "0.2"

[build-dependencies]
idalib-build = "0.4"
